--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   "dependencies": {
     "@joegesualdo/get-youtube-subtitles-node": "^0.1.0",
     "async": "^2.6.1",
+    "bootstrap": "4.1.3",
+    "browserify": "16.2.2",
+    "browserify-shim": "3.8.14",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "elasticsearch": "^15.2.0",
@@ -16,15 +19,13 @@
     "googleapis": "^35.0.0",
     "http-errors": "~1.6.2",
     "https": "^1.0.0",
+    "jquery": "2.1.1",
     "morgan": "~1.9.0",
     "n-gram": "^1.1.0",
+    "popper.js": "1.14.4",
     "pug": "2.0.0-beta11",
     "request": "^2.88.0",
-    "jquery": "2.1.1",
-    "popper.js": "1.14.4",
-    "browserify": "16.2.2",
-    "browserify-shim": "3.8.14",
-    "bootstrap": "4.1.3"
+    "youtube-captions-scraper": "^1.0.3"
   },
   "browserify-shim": {
     "jquery": "GLOBAL:$"
